gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22127.d
version https://git-lfs.github.com/spec/v1
oid sha256:0c2cde06e78fd7ffbeaa58964e58f180a92feff4b3e49f63c2a0a46527181ee9
size 239
